GNOME Bugzilla – Bug 609708
[PATCH] Cannot see signatures from other people
Last modified: 2010-02-12 13:12:26 UTC
1. Open any public key you already have collected and that you know that has any signature. 2. Go to the Trust tab 3. Check and uncheck the bottom checkbox. Every time you check/uncheck the following will appear in the console: (seahorse:22449): Gtk-CRITICAL **: gtk_tree_model_filter_get_model: assertion `GTK_IS_TREE_MODEL_FILTER (filter)' failed (seahorse:22449): GLib-GObject-CRITICAL **: g_object_set_data: assertion `G_IS_OBJECT (object)' failed (seahorse:22449): Gtk-CRITICAL **: gtk_tree_model_filter_refilter: assertion `GTK_IS_TREE_MODEL_FILTER (filter)' failed
Created attachment 153594 [details] [review] 0001-Fixed-bug-in-the-public-key-properties-GUI.patch With handlers specified in the UI file you cannot pass parameters. The solution is using g_signal_object as far as I have seen.
Review of attachment 153594 [details] [review]: I'm not sure why it was like that. I agree the first part of the patch should go in. Does the gtkbuilder file need to be updated to get things to work properly? I think that's just when you try to get GtkBuilder to connect signals automatically.
Hi Adam, If you try committing only the first part, the bug is resolved but the assertion error will be still there because on_pgp_trusted_toggled is called twice. One with arguments caused by gtk_toggle_button_set_active (GTK_TOGGLE_BUTTON (widget), TRUE); and another one without (or bad) arguments, caused by the gtkbuilder file. I'm not sure about the solution neither, but doesn't look bad. Does it?
Sorry, I misread your patch last night. It's completely right, go ahead and commit it.
Committed, thanks for reviewing :) commit 08b392d6b800e3856325919dc877429dded186e6 Author: Pablo Castellano <pablog@src.gnome.org> Date: Fri Feb 12 02:44:16 2010 +0100 Fixed bug in the public key properties GUI. With handlers specified in the UI file you cannot pass parameters. It was causing an assertion error and you couldn't see the people who had signed any public key you had. The solution is using g_signal_object as far as I have seen. https://bugzilla.gnome.org/show_bug.cgi?id=609708