Fixed bug in the public key properties GUI.

With handlers specified in the UI file you cannot pass parameters.
It was causing an assertion error and you couldn't see the people
who had signed any public key you had.
The solution is using g_signal_object as far as I have seen.

https://bugzilla.gnome.org/show_bug.cgi?id=609708